# rust-cli-template

./: .editorconfig  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
src/: main.rs
tests/: integration_tests.rs
