[package]
name = "rust-cli-template"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A template for Rust CLI applications"
license = "MIT"
repository = "https://github.com/1Samuel17/rust-cli-template"
readme = "README.md"
keywords = ["cli", "template"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
cargo = "0.94"
